# rs-counter

./: .env  Cargo.toml  README.md  仲阳天王星c++2面.md
migrations/: 20240828065617_create_users.down.sql  20240828065617_create_users.up.sql
src/: api.rs  db.rs  main.rs
src/api/: usr.rs
